<resources>
    <string name="app_name">ReliabiliT</string>
    <string name="origin">Origin</string>
    <string name="destination">Destination</string>
    <string name="through">through</string>
    <string name="between">between</string>
    <string name="and">and</string>
    <string name="travel_time">Travel Time</string>
    <string name="wait_time">Wait Time</string>
    <string name="actual_label">Actual (seconds)</string>
    <string name="benchmark_label">Benchmark (seconds)</string>
    <string name="arrow_description">-></string>
</resources>
