<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/travel_times_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/travel_time"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message" />

    <TextView
        android:id="@+id/actual"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textSize="36sp"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/benchmark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/travel_times_label" />

    <TextView
        android:id="@+id/benchmark"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textSize="36sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/actual"
        app:layout_constraintTop_toBottomOf="@+id/travel_times_label" />

    <TextView
        android:id="@+id/actual_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/actual_label"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/actual"
        app:layout_constraintStart_toStartOf="@+id/actual"
        app:layout_constraintTop_toBottomOf="@+id/actual" />

    <TextView
        android:id="@+id/benchmark_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/benchmark_label"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/benchmark"
        app:layout_constraintStart_toStartOf="@+id/benchmark"
        app:layout_constraintTop_toBottomOf="@+id/benchmark" />

    <TextView
        android:id="@+id/headways_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/wait_time"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actual_label" />

    <TextView
        android:id="@+id/actual_headway"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textSize="36sp"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/benchmark_headway"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headways_label" />

    <TextView
        android:id="@+id/benchmark_headway"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textSize="36sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/actual_headway"
        app:layout_constraintTop_toBottomOf="@+id/headways_label" />

    <TextView
        android:id="@+id/actual_headway_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/actual_label"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/actual_headway"
        app:layout_constraintStart_toStartOf="@+id/actual_headway"
        app:layout_constraintTop_toBottomOf="@+id/actual_headway" />

    <TextView
        android:id="@+id/benchmark_headway_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/benchmark_label"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/benchmark_headway"
        app:layout_constraintStart_toStartOf="@+id/benchmark_headway"
        app:layout_constraintTop_toBottomOf="@+id/benchmark_headway" />

</android.support.constraint.ConstraintLayout>